@@ -1,9 +1,9 @@
 {
   "timestamp" : "2022-05-21T08:28:17Z",
   "count" : 2,
-  "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -1, +0 ],
+  "count_minmax" : [ 2, 2 ],
+  "count_decinc" : [ -0, +2 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +0 ]
+  "uniques_decinc" : [ -0, +2 ]
 }
