@@ -1,10 +1,10 @@
 {
-  "count": 40,
-  "uniques": 10,
+  "count": 41,
+  "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
