@@ -1,3 +1,10 @@
+2022-05-21T08:28:17Z:
+* notice: last 14d: unq all: 11 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 258 462 / 282 502
+* notice: next accum: outdated-unq outdated-all / unq all: 258 462 / 284 503
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
+* notice: changed dates: [2022-05-07 2022-05-21]
+
 2022-05-21T01:35:11Z:
 * notice: last 14d: unq all: 10 40
 * notice: prev accum: outdated-unq outdated-all / unq all: 251 450 / 280 499
